// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontFace babel extract basic 1`] = `
"import \\"./font-face.test.emotion.css\\";

undefined;"
`;

exports[`fontFace babel extract basic 2`] = `
"@font-face {
    font-family: MyHelvetica;
    src: local(\\"Helvetica Neue Bold\\"),
               local(\\"HelveticaNeue-Bold\\"),
               url(MgOpenModernaBold.ttf);
    font-weight: bold
}"
`;

exports[`fontFace babel extract basic assign to variable 1`] = `
"import \\"./font-face.test.emotion.css\\";

const thisWillBeUndefined = undefined;"
`;

exports[`fontFace babel extract basic assign to variable 2`] = `
"@font-face {
    font-family: MyHelvetica;
    src: local(\\"Helvetica Neue Bold\\"),
               local(\\"HelveticaNeue-Bold\\"),
               url(MgOpenModernaBold.ttf);
    font-weight: bold
}"
`;

exports[`fontFace babel extract interpolation 1`] = `
"
fontFace([], [fontFamilyName], function createEmotionStyledRules(x0) {
     return [{
          \\"fontFamily\\": x0,
          \\"src\\": \\"local(\\\\\\"Helvetica Neue Bold\\\\\\"),\\\\n               local(\\\\\\"HelveticaNeue-Bold\\\\\\"),\\\\n               url(MgOpenModernaBold.ttf)\\",
          \\"fontWeight\\": \\"bold\\"
     }];
});"
`;

exports[`fontFace babel inline basic 1`] = `
"
fontFace([], [], function createEmotionStyledRules() {
     return [{
          \\"fontFamily\\": \\"MyHelvetica\\",
          \\"src\\": \\"local(\\\\\\"Helvetica Neue Bold\\\\\\"),\\\\n               local(\\\\\\"HelveticaNeue-Bold\\\\\\"),\\\\n               url(MgOpenModernaBold.ttf)\\",
          \\"fontWeight\\": \\"bold\\"
     }];
});"
`;

exports[`fontFace babel inline dynamic change import 1`] = `
"
import { fontFace as f } from 'emotion';
f([], [], function createEmotionStyledRules() {
  return [{
    'fontFamily': 'MyHelvetica',
    'src': 'local(\\"Helvetica Neue Bold\\"),\\\\n               local(\\"HelveticaNeue-Bold\\"),\\\\n               url(MgOpenModernaBold.ttf)',
    'fontWeight': 'bold'
  }];
});
fontFace\`
          font-family: MyHelvetica;
          src: local(\\"Helvetica Neue Bold\\"),
              local(\\"HelveticaNeue-Bold\\"),
              url(MgOpenModernaBold.ttf);
          font-weight: bold;
      \`;"
`;

exports[`fontFace babel inline interpolation 1`] = `
"
fontFace([], [fontFamilyName], function createEmotionStyledRules(x0) {
     return [{
          \\"fontFamily\\": x0,
          \\"src\\": \\"local(\\\\\\"Helvetica Neue Bold\\\\\\"),\\\\n               local(\\\\\\"HelveticaNeue-Bold\\\\\\"),\\\\n               url(MgOpenModernaBold.ttf)\\",
          \\"fontWeight\\": \\"bold\\"
     }];
});"
`;

exports[`fontFace babel inline static change import 1`] = `
"
f([], [], function createEmotionStyledRules() {
  return [{
    \\"fontFamily\\": \\"MyHelvetica\\",
    \\"src\\": \\"local(\\\\\\"Helvetica Neue Bold\\\\\\"),\\\\n               local(\\\\\\"HelveticaNeue-Bold\\\\\\"),\\\\n               url(MgOpenModernaBold.ttf)\\",
    \\"fontWeight\\": \\"bold\\"
  }];
});
fontFace\`
          font-family: MyHelvetica;
          src: local(\\"Helvetica Neue Bold\\"),
              local(\\"HelveticaNeue-Bold\\"),
              url(MgOpenModernaBold.ttf);
          font-weight: bold;
      \`;"
`;
